app-test/testdata/typesystem/neg/pattern-matching-input-pattern/src/patmat.cal
namespace patmat:
    type T : (int a, bool b) end

    actor InputPattern() int IN ==> :
        action IN:[T(n, _)] ==>
        end
    end
end